Вертска mob-header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="container">
+      <nav class="navigation">
+        <ul class="menu">
+          <li class="menu__item">услуги</li>
+          <li class="menu__item">виджеты</li>
+          <li class="menu__item">интеграции</li>
+          <li class="menu__item">кейсы</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <section class="main">
+    <div class="container">
+      <div class="main__header">
+        <div class="main__header-title">
+          <h3>Зарабатывайте больше</h3>
+          <h3>с WELBEX</h3>
+        </div>
+        <p>Развиваем и контролируем продажи за вас</p>
+      </div>
+
+    </div>
+  </section>
 </body>
 
 </html>
