Верстка блока main

--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
     <div class="container">
       <div class="main__header">
         <div class="main__header-title">
-          <h3>Зарабатывайте больше</h3>
-          <h3>с WELBEX</h3>
+          <h3 class="main__header-title-text">Зарабатывайте больше
+            <span>с WELBEX</span></h3>
         </div>
-        <p>Развиваем и контролируем продажи за вас</p>
+        <p class="main__header-text">Развиваем и контролируем продажи за вас</p>
       </div>
 
+      <div class="main__offer">
+        <p class="offer__text">Вместе с <span>бесплатной</span> <span>консультацией</span> мы дарим:</p>
+        <div class="offer__list">
+          <p class="offer__list_item">Skype аудит</p>
+          <p class="offer__list_item">Dashboard</p>
+          <p class="offer__list_item">30 виджетов</p>
+          <p class="offer__list_item">Месяц аmoCRM</p>
+        </div>
+      </div>
     </div>
   </section>
 </body>
