--- a/index.html
+++ b/index.html
@@ -44,6 +44,61 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__blocks">
+        <div class="block">
+          <h5 class="block__title">О компании</h5>
+          <div class="block__body">
+            <a class="block__body-item" href="#!">Партнёрская программа</a>
+            <a class="block__body-item" href="#!">Вакансии</a>
+          </div>
+        </div>
+        <div class="block block-menu">
+          <h5 class="block__title">Меню</h5>
+          <div class="block__body">
+            <a class="block__body-item" href="#!">Расчёт стоимости</a>
+            <a class="block__body-item" href="#!">Благодарность клиентов</a>
+            <a class="block__body-item" href="#!">Услуги</a>
+            <a class="block__body-item" href="#!">Кейсы</a>
+            <a class="block__body-item" href="#!">Виджеты</a>
+            <a class="block__body-item" href="#!">Серфикаты</a>
+            <a class="block__body-item" href="#!">Интеграции</a>
+            <a class="block__body-item" href="#!">Блог на Youtube</a>
+            <a class="block__body-item" href="#!">Наши клиенты</a>
+            <a class="block__body-item" href="#!">Вопрос / Ответ</a>
+          </div>
+        </div>
+
+        <div class="block block-contact">
+          <h5 class="block__title">контакты</h5>
+          <div class="block__body">
+            <p class="block__body-phone">+7 555 555-55-55</p>
+            <div class="block__body-links">
+              <a href="#!" class="links__link">
+                <img src="./assets/telegram.svg" alt="telegram" class="link__item">
+              </a>
+              <a href="#!" class="links__link">
+                <img src="./assets/whatsapp.svg" alt="whatsapp" class="link__item">
+              </a>
+              <a href="#!" class="links__link">
+                <img src="./assets/viber.svg" alt="viber" class="link__item">
+              </a>
+            </div>
+            <p class="block__body-address">
+              Москва, Путевой проезд 3с1, к 902
+            </p>
+            <div class="block__body-info">
+              <p class="body-info__item">©WELBEX 2022. Все права защищены.</p>
+              <a class="body-info__item body-info__item-underline">Политика конфиденциальности</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 </body>
 
 </html>
