--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </nav>
     </div>
   </header>
-
   <section class="main">
+    <div class="ball ball-purple-light"></div>
     <div class="container">
       <div class="main__header">
         <div class="main__header-title">
@@ -96,7 +96,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </footer>
 </body>
