Pixel Perfect мобилной версии

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p class="offer__text">Вместе с <span>бесплатной</span> <span>консультацией</span> мы дарим:</p>
         <div class="offer__list">
           <p class="offer__list_item">Skype аудит</p>
-          <p class="offer__list_item">Dashboard</p>
           <p class="offer__list_item">30 виджетов</p>
+          <p class="offer__list_item">Dashboard</p>
           <p class="offer__list_item">Месяц аmoCRM</p>
         </div>
       </div>
@@ -48,7 +48,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__blocks">
-        <div class="block">
+        <div class="block block-about">
           <h5 class="block__title">О компании</h5>
           <div class="block__body">
             <a class="block__body-item" href="#!">Партнёрская программа</a>
@@ -63,7 +63,7 @@
             <a class="block__body-item" href="#!">Услуги</a>
             <a class="block__body-item" href="#!">Кейсы</a>
             <a class="block__body-item" href="#!">Виджеты</a>
-            <a class="block__body-item" href="#!">Серфикаты</a>
+            <a class="block__body-item" href="#!">Сертификаты</a>
             <a class="block__body-item" href="#!">Интеграции</a>
             <a class="block__body-item" href="#!">Блог на Youtube</a>
             <a class="block__body-item" href="#!">Наши клиенты</a>
@@ -80,11 +80,12 @@
                 <img src="./assets/telegram.svg" alt="telegram" class="link__item">
               </a>
               <a href="#!" class="links__link">
-                <img src="./assets/whatsapp.svg" alt="whatsapp" class="link__item">
-              </a>
-              <a href="#!" class="links__link">
                 <img src="./assets/viber.svg" alt="viber" class="link__item">
               </a>
+              <a href="#!" class="links__link">
+                <img src="./assets/whatsapp.svg" alt="whatsapp" class="link__item">
+              </a>
+
             </div>
             <p class="block__body-address">
               Москва, Путевой проезд 3с1, к 902
