--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
     </div>
   </header>
   <section class="main">
-    <div class="ball ball-purple-light"></div>
+    <div class="balls-phone">
+      <div class="ball ball-purple"></div>
+      <div class="ball ball-purple-light"></div>
+      <div class="ball ball-red"></div>
+      <div class="ball ball-red-light"></div>
+    </div>
+
+    <div class="main__background"></div>
     <div class="container">
       <div class="main__header">
         <div class="main__header-title">
